Dark mode menu color mobile mode bugfix

--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ i.light {
 i.dark {
     position: absolute;
     font-style: normal;
-    right: 10px;
+    right: 5px;
 }
 
 .checkbox-label .ball {
@@ -172,7 +172,7 @@ body.dark .home-icon img {
     display: block;
     float: right;
     width:80%;
-    text-align:justify;
+    text-align:center;
 /*    margin-top: 0%;*/
     font-size: 1.5em;
 }
@@ -222,6 +222,9 @@ body.dark .home-icon img {
     padding-left: 12%;
     padding-right: 12%;
 /*    margin-bottom: 10%;*/
+}
+.main-right .description ul {
+    text-align: left;
 }
 a {
     text-decoration: none;
@@ -306,7 +309,11 @@ body.dark .info-bar .type {
         align-content: center;
         z-index: 10;
         margin-top: 0;
-        background-color: rgba(0, 0, 0, 0.7);
+/*        background-color: rgba(0, 0, 0, 0.7);*/
+        background-color: #eee8d5;
+    }
+    body.dark .main-left {
+        background-color: #002b36;
     }
     .menu-icon {
         position: relative;
@@ -335,7 +342,11 @@ body.dark .info-bar .type {
         position: fixed;
         height: 100%;
 /*        z-index: 10;*/
-        background-color: rgba(100, 100, 100, 0.99);
+/*        background-color: rgba(100, 100, 100, 0.99);*/
+        background-color: #eee8d5;
+    }
+    body.dark .menu {
+        background-color: #002b36;
     }
     .menu ul li{
 /*        display: none;*/
